--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,25 @@ python = "^3.7.0"
 click = ">=8.0.0"
 rich = ">=10.3.0"
 PyYAML = ">=5.4.1"
+numpy = "1.19.5"
+pandas = "*"
+seaborn = "*"
+matplotlib = "*"
+numba = "*"
+scanpy = ">=1.5"
+anndata = ">=0.7.2"
+#h5py "<3"
+scipy = "*"
+scikit-learn = "*"
+scikit-misc = "*"
+umap-learn = "*"
+pydot = "*"
+python-igraph = "*"
+torch = "=1.7.1"
+tqdm = "*"
+tk = "*"
+
+
 
 [tool.poetry.dev-dependencies]
 pytest = ">=6.2.3"
