--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ python = "^3.7.0"
 click = ">=8.0.0"
 rich = ">=10.3.0"
 PyYAML = ">=5.4.1"
-numpy = "==1.19.5"
+#numpy = "==1.19.5"
 #pandas = "*"
 #seaborn = "*"
 #matplotlib = "*"
