--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,7 @@ click = ">=8.0.0"
 rich = ">=10.3.0"
 PyYAML = ">=5.4.1"
 numpy = "==1.19.5"
-#pandas = "*"
+pandas = "*"
 #seaborn = "*"
 #matplotlib = "*"
 #numba = "*"
