--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,27 +46,27 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-python = "^3.7.0"
+python = ">=3.8.0"
 click = ">=8.0.0"
 rich = ">=10.3.0"
 PyYAML = ">=5.4.1"
 numpy = "==1.19.5"
-pandas = "*"
-#seaborn = "*"
-#matplotlib = "*"
-#numba = "*"
-#scanpy = ">=1.5"
-#anndata = ">=0.7.2"
-#h5py "<3"
-#scipy = "*"
-#scikit-learn = "*"
-#scikit-misc = "*"
-#umap-learn = "*"
-#pydot = "*"
-#python-igraph = "*"
-#torch = "==1.7.1"
-#tqdm = "!=4.60.0"
-#tk = "*"
+pandas = ">=1.3.0"
+seaborn = ">=0.10.0"
+matplotlib = ">=3.5.0"
+torch = "==1.7.1"
+scanpy = ">=1.5"
+numba = ">=0.11.0"
+anndata = ">=0.7.2"
+scipy = ">=1.6.0"
+scikit-learn = ">=1.1.1"
+scikit-misc = ">=0.1.3"
+umap-learn = ">=0.5.1"
+pydot = ">=1.4.1"
+python-igraph = ">=0.9.11"
+tqdm = ">=4.62.0"
+tk = ">=0.1.0"
+#h5py "<3
 
 
 
