--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -159,4 +159,6 @@ jobs:
               run: nox --force-color --session=coverage -- xml -i
 
             - name: Upload coverage report
-              uses: codecov/codecov-action@v2.1.0
+              uses: codecov/codecov-action@v2
+              with:
+                  token: ${{ secrets.CODECOV_TOKEN }}
