--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,64 +1,63 @@
 repos:
-    - repo: local
+    - repo: https://github.com/psf/black
+      rev: 22.6.0
       hooks:
-          - id: black
-            name: black
-            entry: black
-            language: system
-            types: [python]
-            require_serial: true
-          - id: check-added-large-files
-            name: Check for added large files
-            entry: check-added-large-files
-            language: system
-          - id: check-toml
-            name: Check Toml
-            entry: check-toml
-            language: system
-            types: [toml]
-          - id: check-yaml
-            name: Check Yaml
-            entry: check-yaml
-            language: system
-            types: [yaml]
-          - id: end-of-file-fixer
-            name: Fix End of Files
-            entry: end-of-file-fixer
-            language: system
-            types: [text]
-            stages: [commit, push, manual]
-            exclude: docs/
-          - id: flake8
-            name: flake8
-            entry: flake8
-            language: system
-            types: [python]
-            require_serial: true
-          - id: pyupgrade
-            name: pyupgrade
-            description: Automatically upgrade syntax for newer versions.
-            entry: pyupgrade
-            language: system
-            types: [python]
-            args: [--py38-plus]
-          - id: trailing-whitespace
-            name: Trim Trailing Whitespace
-            entry: trailing-whitespace-fixer
-            language: system
-            types: [text]
-            stages: [commit, push, manual]
+          - id: black-jupyter
     - repo: https://github.com/pre-commit/mirrors-prettier
       rev: v2.5.1
       hooks:
           - id: prettier
-    - repo: https://github.com/pycqa/isort
-      rev: 5.8.0
+    - repo: https://github.com/asottile/blacken-docs
+      rev: v1.12.1
+      hooks:
+          - id: blacken-docs
+    - repo: https://github.com/PyCQA/isort
+      rev: 5.10.1
       hooks:
           - id: isort
-            name: isort (python)
-          - id: isort
-            name: isort (cython)
-            types: [cython]
-          - id: isort
-            name: isort (pyi)
-            types: [pyi]
+    - repo: https://github.com/asottile/yesqa
+      rev: v1.4.0
+      hooks:
+          - id: yesqa
+            additional_dependencies:
+                - flake8-tidy-imports
+                - flake8-docstrings
+                - flake8-rst-docstrings
+                - flake8-comprehensions
+                - flake8-bugbear
+                - flake8-blind-except
+    - repo: https://github.com/pre-commit/pre-commit-hooks
+      rev: v4.3.0
+      hooks:
+          - id: check-ast
+          - id: end-of-file-fixer
+          - id: mixed-line-ending
+            args: [--fix=lf]
+          - id: trailing-whitespace
+          - id: check-case-conflict
+    - repo: https://github.com/myint/autoflake
+      rev: v1.4
+      hooks:
+          - id: autoflake
+            args:
+                - --in-place
+                - --remove-all-unused-imports
+                - --remove-unused-variable
+                - --ignore-init-module-imports
+    - repo: https://github.com/PyCQA/flake8
+      rev: 5.0.4
+      hooks:
+          - id: flake8
+            additional_dependencies:
+                - flake8-tidy-imports
+                - flake8-docstrings
+                - flake8-rst-docstrings
+                - flake8-comprehensions
+                - flake8-bugbear
+                - flake8-blind-except   
+- repo: https://github.com/asottile/pyupgrade
+      rev: v2.37.3
+      hooks:
+          - id: pyupgrade
+            args: [--py3-plus, --py38-plus, --keep-runtime-typing]
+    
