--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,4 +1,11 @@
-comment: false
+comment:
+    layout: diff, flags, files
+    behavior: once
+    require_base: no
+    
+codecov:
+    require_ci_to_pass: no    
+    
 coverage:
     status:
         project:
