--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -15,9 +15,14 @@ sphinx:
 # Optionally build your docs in additional formats such as PDF and ePub
 formats: all
 
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+
 # Optionally set the version of Python and requirements required to build your docs
 python:
-    version: 3.8
+    version: 3.9
     install:
         - method: pip
           path: .
