--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -22,8 +22,8 @@ build:
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-    version: 3.9
     install:
-        - method: pip
-          path: .
-          requirements: docs/requirements.txt
+        - requirements: docs/requirements.txt
+        #- method: pip
+        #  path: .
+        # - requirements: docs/requirements.txt
