--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,6 +4,7 @@ sphinx-rtd-dark-mode>=1.2.1
 sphinx-automodapi>=0.13
 sphinx_click>=3.0.0
 nbsphinx>=0.8.10
+py-pandoc>=1.10
 click>=8.0.1
 #pre-commit
 
