--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -6,6 +6,8 @@ sphinx_click>=3.0.0
 click>=8.0.1
 #pre-commit
 
+#these requirements come from the convexgating module itself
+# They are included to run automod documentation building
 click >=8.0.0
 rich >=10.3.0
 PyYAML >=5.4.1
