--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,22 +8,70 @@ click>=8.0.1
 
 #these requirements come from the convexgating module itself
 # They are included to run automod documentation building
-click >=8.0.0
-rich >=10.3.0
-PyYAML >=5.4.1
-numpy ==1.19.5
-pandas >=1.3.0
-seaborn >=0.10.0
-matplotlib >=3.5.0
-torch ==1.7.1
-scanpy >=1.5
-numba >=0.11.0
-anndata >=0.7.2
-scipy >=1.6.0
-scikit-learn >=1.1.1
-scikit-misc >=0.1.3
-umap-learn >=0.5.1
-pydot >=1.4.1
-python-igraph >=0.9.11
-tqdm >=4.62.0
-tk >=0.1.0
+#click >=8.0.0
+#rich >=10.3.0
+#PyYAML >=5.4.1
+#numpy ==1.19.5
+#pandas >=1.3.0
+#seaborn >=0.10.0
+#matplotlib >=3.5.0
+#torch ==1.7.1
+#scanpy >=1.5
+#numba >=0.11.0
+#anndata >=0.7.2
+#scipy >=1.6.0
+#scikit-learn >=1.1.1
+#scikit-misc >=0.1.3
+#umap-learn >=0.5.1
+#pydot >=1.4.1
+#python-igraph >=0.9.11
+#tqdm >=4.62.0
+#tk >=0.1.0
+anndata==0.10.5.post1
+array-api-compat==1.6
+click==8.1.7
+contourpy==1.1.1
+cycler==0.12.1
+fonttools==4.51.0
+get-annotations==0.1.2
+h5py==3.11.0
+igraph==0.11.4
+joblib==1.4.0
+kiwisolver==1.4.5
+llvmlite==0.39.1
+markdown-it-py==3.0.0
+matplotlib==3.6.3
+matplotlib-venn==0.11.10
+mdurl==0.1.2
+natsort==8.4.0
+networkx==3.2.1
+numba==0.56.4
+numpy==1.19.5
+packaging==24.0
+pandas==1.4.4
+patsy==0.5.6
+pillow==10.3.0
+pydot==2.0.0
+pynndescent==0.5.12
+pyparsing==3.1.2
+python-dateutil==2.9.0.post0
+python-igraph==0.11.4
+pytz==2024.1
+pywget==0.31
+rich==13.7.1
+scanpy==1.9.6
+scikit-learn==1.4.2
+scikit-misc==0.1.4
+scipy==1.10.1
+seaborn==0.12.2
+session-info==1.0.0
+statsmodels==0.14.1
+stdlib-list==0.10.0
+texttable==1.7.0
+threadpoolctl==3.4.0
+tk==0.1.0
+torch==1.7.1
+tqdm==4.66.2
+typing-extensions==4.11.0
+umap-learn==0.5.6
+
