--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "convexgating"
-version = "0.1.1"  # <<COOKIETEMPLE_FORCE_BUMP>>
+version = "1.0.0"  # <<COOKIETEMPLE_FORCE_BUMP>>
 description = "ConvexGating is a Python tool to infer optimal gating strategies for flow cytometry and cyTOF data."
 authors = ["Vincent Friedrich <vf2101@online.de>"]
 license = "MIT"
@@ -13,10 +13,10 @@ packages = [
 ]
 classifiers = [
    # "Programming Language :: Python :: 3.7",
-   "Programming Language :: Python :: 3.8",
+   #"Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-]
+    #"Programming Language :: Python :: 3.10",
+    ]
 
 #dependencies = [
 #"python ^3.7.0",
@@ -46,8 +46,8 @@ classifiers = [
 
 
 [tool.poetry.dependencies]
-#python = ">=3.9,<3.10"
-python = ">=3.8.0"
+python = ">=3.9,<3.11"
+#python = ">=3.8.0"
 anndata = "==0.10.5.post1"
 array-api-compat = "==1.6"
 click = "==8.1.7"
@@ -67,7 +67,7 @@ mdurl = "==0.1.2"
 natsort = "==8.4.0"
 networkx = "==3.2.1"
 numba = "==0.56.4"
-numpy = "==1.19.5"
+numpy = ">=1.19.5"
 packaging = "==24.0"
 pandas = "==1.4.4"
 patsy = "==0.5.6"
@@ -86,7 +86,7 @@ scikit-misc = "==0.1.4"
 scipy = "==1.10.1"
 seaborn = "==0.12.2"
 session-info = "==1.0.0"
-statsmodels = "==0.14.1"
+statsmodels = ">=0.14.1"
 stdlib-list = "==0.10.0"
 texttable = "==1.7.0"
 threadpoolctl = "==3.4.0"
@@ -143,7 +143,7 @@ pre-commit-hooks = ">=4.0.1"
 sphinx-rtd-theme = ">=0.5.0"
 sphinx-click = ">=3.0.0"
 Pygments = ">=2.8.1"
-types-pkg-resources = ">=0.1.2"
+#types-pkg-resources = ">=0.1.2"
 types-requests = ">=2.25.2"
 types-attrs = ">=19.1.0"
 sphinx-rtd-dark-mode = ">=1.2.3"
