--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ classifiers = [
     "Programming Language :: Python :: 3.9",
     #"Programming Language :: Python :: 3.10",
     ]
+exclude = ["README.rst"]
 
 #dependencies = [
 #"python ^3.7.0",
